rename printplugin "list" to "itemlist" make the itemlist and whatsnext print plugins compile, but don't add them to the CMakeLists.txt since they don't do anything useful.
would be a good junior job to enable itemlist and whatsnext printplugins.

--- a/plugins/printing/itemlist/calprintitemlistconfig_base.ui
+++ b/plugins/printing/itemlist/calprintitemlistconfig_base.ui
@@ -1,8 +1,8 @@
 <ui version="4.0" >
  <author>Reinhold Kainhofer &lt;reinhold@kainhofer.com></author>
- <comment>Configuration page for the print list mode.</comment>
- <class>CalPrintListConfig_Base</class>
- <widget class="QWidget" name="CalPrintListConfig_Base" >
+ <comment>Configuration page for the print item list mode.</comment>
+ <class>CalPrintItemListConfig_Base</class>
+ <widget class="QWidget" name="CalPrintItemListConfig_Base" >
   <property name="geometry" >
    <rect>
     <x>0</x>
